<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimens_15"
        android:layout_marginBottom="@dimen/dimens_15"
        android:background="@drawable/bg_whilte_round4"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimens_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_16"
            android:layout_marginTop="@dimen/dimens_23"
            android:text="@string/base_info"
            android:textColor="@color/color_main"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_15"
            android:layout_marginTop="@dimen/dimens_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black_8"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_patient_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_5"
                android:text=""
                android:textColor="@color/color_main"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="106dp"
                android:text="@string/sex"
                android:textColor="@color/black_8"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_patient_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_5"
                android:text=""
                android:textColor="@color/color_main"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_15"
            android:layout_marginTop="@dimen/dimens_13">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/black_8"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_patient_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_5"
                android:text=""
                android:textColor="@color/color_main"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="106dp"
                android:text="@string/phone"
                android:textColor="@color/black_8"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_patient_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_5"
                android:text=""
                android:textColor="@color/color_main"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_15"
            android:layout_marginTop="@dimen/dimens_13">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medical_history"
                android:textColor="@color/black_8"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_medical_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_5"
                android:text=""
                android:textColor="@color/color_main"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_15"
            android:layout_marginTop="@dimen/dimens_13">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/describe"
                android:textColor="@color/black_8"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_medical_describe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_5"
                android:text=""
                android:textColor="@color/color_main"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_15"
            android:layout_marginTop="@dimen/dimens_13">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visit_time"
                android:textColor="@color/black_8"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_visit_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_5"
                android:text=""
                android:textColor="@color/color_main"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_15"
            android:layout_marginTop="@dimen/dimens_13">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_time"
                android:textColor="@color/black_8"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_pay_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_5"
                android:text=""
                android:textColor="@color/color_main"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_15"
            android:layout_marginTop="@dimen/dimens_13">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iless_resume"
                android:textColor="@color/black_8"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_iless_resume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_5"
                android:text=""
                android:textColor="@color/color_main"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_15"
            android:layout_marginTop="@dimen/dimens_13">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diagnose_suggest"
                android:textColor="@color/black_8"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_diagnose_suggest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_5"
                android:text=""
                android:textColor="@color/color_main"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>