<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:paddingBottom="@dimen/dimens_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_50">

            <View
                android:layout_width="@dimen/dimens_3"
                android:layout_height="@dimen/dimens_12"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimens_15"
                android:background="@color/color_yellow"></View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimens_26"
                android:text="订单金额"
                android:textColor="@color/color_main"
                android:textSize="14sp" />
        </RelativeLayout>

        <include layout="@layout/base_line_layout"></include>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_15"
                android:text="@string/diagnosis_fee"
                android:textColor="@color/black_6"
                android:textSize="@dimen/dimens_12" />

            <TextView
                android:id="@+id/tv_momeny_unit1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dimens_15"
                android:text="@string/momeny_unit"
                android:textColor="@color/black_6"
                android:textSize="@dimen/dimens_12" />

            <TextView
                android:id="@+id/tv_diagnosis_fee"
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/tv_momeny_unit1"
                android:textColor="@color/color_yellow_light"
                android:textSize="@dimen/dimens_12" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_13">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_15"
                android:text="@string/medicine_price"
                android:textColor="@color/black_6"
                android:textSize="@dimen/dimens_12" />

            <TextView
                android:id="@+id/tv_momeny_unit2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dimens_15"
                android:text="@string/momeny_unit"
                android:textColor="@color/black_6"
                android:textSize="@dimen/dimens_12" />

            <TextView
                android:id="@+id/tv_medicine_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/tv_momeny_unit2"
                android:textColor="@color/color_yellow_light"
                android:textSize="@dimen/dimens_12" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_13">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_15"
                android:text="@string/make_price"
                android:textColor="@color/black_6"
                android:textSize="@dimen/dimens_12" />

            <TextView
                android:id="@+id/tv_momeny_unit3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dimens_15"
                android:text="@string/momeny_unit"
                android:textColor="@color/black_6"
                android:textSize="@dimen/dimens_12" />

            <TextView
                android:id="@+id/tv_make_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/tv_momeny_unit3"
                android:textColor="@color/color_yellow_light"
                android:textSize="@dimen/dimens_12" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_13">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_15"
                android:text="@string/transport_price"
                android:textColor="@color/black_6"
                android:textSize="@dimen/dimens_12" />

            <TextView
                android:id="@+id/tv_momeny_unit4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dimens_15"
                android:text="@string/momeny_unit"
                android:textColor="@color/black_6"
                android:textSize="@dimen/dimens_12" />

            <TextView
                android:id="@+id/tv_transport_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/tv_momeny_unit4"
                android:textColor="@color/color_yellow_light"
                android:textSize="@dimen/dimens_12" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>