<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_50">

            <View
                android:layout_width="@dimen/dimens_3"
                android:layout_height="@dimen/dimens_12"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimens_15"
                android:background="@color/color_yellow"></View>

            <TextView
                android:id="@+id/tv_yaocai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimens_26"
                android:text="@string/medicinal_materials"
                android:textColor="@color/color_main"
                android:textSize="14sp" />

            <LinearLayout
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dimens_15">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common"
                    android:textColor="@color/color_main"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_medicinal_nums"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/color_yellow"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taste"
                    android:textColor="@color/color_main"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_medicinal_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/color_yellow"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

        <include layout="@layout/base_line_layout"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <com.ais.patient.widget.WarpLinearLayout
                android:id="@+id/tv_medicinal_detail"
                app:grivate="left"
                android:layout_margin="@dimen/dimens_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View
            android:layout_marginRight="@dimen/dimens_15"
            android:layout_marginLeft="@dimen/dimens_15"
            android:background="@color/color_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_1"></View>
        <RelativeLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_40">
            <TextView
                android:id="@+id/tv1"
                android:layout_marginLeft="@dimen/dimens_16"
                android:layout_centerVertical="true"
                android:textColor="@color/color_main"
                android:textSize="12sp"
                android:text="@string/do_medicinal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_supplier"
                android:layout_toRightOf="@+id/tv1"
                android:layout_marginLeft="@dimen/dimens_10"
                android:layout_centerVertical="true"
                android:textColor="@color/color_main"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:visibility="gone"
                android:orientation="horizontal"
                android:layout_marginRight="@dimen/dimens_16"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:textColor="@color/color_main"
                android:textSize="12sp"
                android:text="@string/common"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_do_medicinal_nums"
                android:layout_centerVertical="true"
                android:textColor="@color/color_yellow"
                android:textSize="12sp"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
                <TextView
                    android:layout_centerVertical="true"
                    android:textColor="@color/color_main"
                    android:textSize="12sp"
                    android:text="@string/stick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>
        <View
            android:layout_marginRight="@dimen/dimens_15"
            android:layout_marginLeft="@dimen/dimens_15"
            android:background="@color/color_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_1"></View>
        <LinearLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:id="@+id/tv_user_method"
            android:padding="@dimen/dimens_15"
            android:layout_margin="@dimen/dimens_15"
            android:textSize="@dimen/sp_12"
            android:textColor="#FF4A73D2"
            android:visibility="gone"
            android:background="@drawable/bg_gray_round4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
            <com.ais.patient.widget.NetstedListView
                android:id="@id/mNetstedListView"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimens_15"
                android:divider="@null"
                android:layout_margin="@dimen/dimens_15"
                android:background="@drawable/bg_gray_round4"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>